--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -30,3 +30,8 @@ test:
 
 production:
   secret_key_base: <%= ENV["SECRET_KEY_BASE"] %>
+
+
+staging:
+  secret_key_base: <%= ENV["SECRET_KEY_BASE"] %>
+
