--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,9 @@
 sudo: false
+before_install:
+  - curl -o- -L https://yarnpkg.com/install.sh | bash -s -- --version 1.3.2
+  - export PATH=$HOME/.yarn/bin:$PATH
+cache:
+  yarn: true
 language: ruby
 bundler_args: --without development production staging
 rvm:
