--- a/package.json
+++ b/package.json
@@ -2,6 +2,15 @@
   "name": "go-fox",
   "private": true,
   "dependencies": {
-    "milligram": "^1.3.0"
+    "@rails/webpacker": "^3.2.2",
+    "babel-preset-react": "^6.24.1",
+    "milligram": "^1.3.0",
+    "prop-types": "^15.6.0",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
+    "react_ujs": "^2.4.3"
+  },
+  "devDependencies": {
+    "webpack-dev-server": "^2.11.1"
   }
 }
