--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "dependencies": {
     "@rails/webpacker": "^3.2.2",
     "babel-preset-react": "^6.24.1",
+    "jquery": "^3.3.1",
     "milligram": "^1.3.0",
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react_ujs": "^2.4.3"
+    "react_ujs": "^2.4.3",
+    "select2": "^4.0.6-rc.1"
   },
   "devDependencies": {
     "webpack-dev-server": "^2.11.1"
