Add admin account based on rails secrets from env

--- a/.env.example
+++ b/.env.example
@@ -4,4 +4,6 @@ MAILER_USERNAME=key
 MAILER_PASSWORD=key
 MAILER_HOST=key
 ADMIN_USERNAME=key
+ADMIN_EMAIL=key
 ADMIN_PASSWORD=key
+ADMIN_ORGANISATION=key
