--- a/config/appsignal.yml
+++ b/config/appsignal.yml
@@ -4,7 +4,7 @@ default: &defaults
   push_api_key: "<%= ENV['APPSIGNAL_PUSH_API_KEY'] %>"
 
   # Your app's name
-  name: "GoFox"
+  name: "<%= ENV['APPSIGNAL_APP_NAME'] %>"
 
   # Actions that should not be monitored by AppSignal
   # ignore_actions:
