--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "es6-promise": "^4.2.4",
     "jquery": "^3.3.1",
     "prop-types": "^15.6.0",
+    "scrollmagic": "^2.0.6",
     "select2": "^4.0.6-rc.1",
     "vue": "^2.5.13",
     "vue-loader": "^14.2.1",
