Attempt to fix travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ before_install:
 cache:
   yarn: true
 language: ruby
-bundler_args: --without development production staging
+bundler_args: --without development
 rvm:
 - 2.5.0
 addons:
