Add portuguese to application helper and surveys form yml

--- a/lib/data/content/surveys-form.yml
+++ b/lib/data/content/surveys-form.yml
@@ -2,6 +2,7 @@ default_language:
   en: "English"
   es: "Spanish"
   fr: "French"
+  pt: "Portuguese"
 
 participant_level_of_study:
   undergraduate: "Undergraduate degree"
