--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ncfa",
+  "name": "go-fox",
   "private": true,
   "scripts": {
     "build": "RAILS_ENV=production NODE_ENV=production ./bin/webpack",
@@ -26,7 +26,6 @@
   },
   "devDependencies": {
     "eslint": "~5.16.0",
-    "eslint-loader": "^2.1.2",
     "eslint-plugin-vue": "^5.2.3",
     "webpack-dev-server": "^3.3.1"
   }
